Changed anchor links (About and Projects) to separate pages

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
               href="index.html"
               >Home</a
             >
-            <a class="nav-link text-dark" href="#about">About</a>
-            <a class="nav-link text-dark" href="#projects">Projects</a>
+            <a class="nav-link text-dark" href="about.html">About</a>
+            <a class="nav-link text-dark" href="projects.html">Projects</a>
             <a class="nav-link text-dark" href="#e-mail">Contact</a>
           </div>
         </div>
@@ -77,133 +77,6 @@
 
       <div class="flex-fill d-lg-block ml-pic">
         <img src="src/images/ml.JPG" class="img-fluid rounded" alt="Madeline" />
-      </div>
-    </div>
-    <hr />
-    <hr />
-    <hr />
-    <h2 class="about-me-header" id="about">About Me</h2>
-
-    <div class="work-experience-section">
-      <h4 class="header pb-3">Work Experience</h4>
-      <p class="work-description">
-        Madeline is a Board Certified Behavior Analyst turned Front-End
-        Developer. She has always enjoyed tapping into her creativity and
-        problem-solving abilities. Madeline stumbled upon coding classes in
-        January of 2022. Madeline quickly became enamored with coding and
-        decided to pursue a new career in which she could continue to
-        collaborate and assist others in achieving their short-term and
-        long-term objectives.
-      </p>
-    </div>
-
-    <div class="skills-section">
-      <h4 class="header skills-header pb-3">Skills</h4>
-      <p class="skills-description">
-        Here are some of the skills Madeline can bring to the team:
-      </p>
-      <ul>
-        <li>Effective collaborator</li>
-        <li>Adept communicator</li>
-        <li>Takes initiative</li>
-        <li>Detail-oriented</li>
-        <li>Persistant problem-solver</li>
-        <li>Creative</li>
-        <li>Dedicated learner</li>
-      </ul>
-    </div>
-
-    <div class="interests-section">
-      <h4 class="header pb-3">Interests</h4>
-      <p class="interests-description">
-        Madeline loves spending time with her husband and son as well as their
-        large extended family and friends. She enjoys Rom-Coms and dry humor.
-        Traveling and trying new foods and wine never get old.
-      </p>
-    </div>
-    <hr />
-    <hr />
-    <hr />
-    <h2 class="projects-header" id="projects">My Projects</h2>
-
-    <div class="container text-center app-preview-display">
-      <div class="row p-5">
-        <div class="col d-none d-lg-block">
-          <img
-            class="w-75 border rounded"
-            src="src/images/boba_tea.png"
-            class="img-fluid rounded home-img"
-            alt="boboa tea app screenshot"
-          />
-        </div>
-        <div class="col">
-          <h4 class="header app boba-app">Bubble Tea App</h4>
-          <p class="app-description p-3">
-            This Bubble Tea App was Madeline's first taste of coding that
-            sparked her interest in web design. After taking an introductory
-            class via SheCodes with no prior experience, this app was her final
-            project. Check it out here!
-          </p>
-          <a
-            class="btn btn-dark app-launch-btn pt-3 pb-3"
-            href="https://www.shecodes.io/workshops/shecodes-basics-948b080f-f680-4a22-b8bd-8d57ae6ee387/projects/728242"
-            target="_blank"
-            role="button"
-            >Launch Bubble Tea App</a
-          >
-        </div>
-      </div>
-
-      <div class="row p-5 weather-app">
-        <div class="col">
-          <h4 class="header app">Weather App</h4>
-          <p class="app-description p-3">
-            This Weather App can share real-time weather information. Type your
-            location or anywhere in the world into the search bar to find your
-            accurate forecast. Check out the app and interact with it!
-          </p>
-          <a
-            class="btn btn-dark app-launch-btn pt-3 pb-3"
-            href="https://calm-gingersnap-42cb99.netlify.app/"
-            target="_blank"
-            role="button"
-            >Launch Weather App</a
-          >
-        </div>
-
-        <div class="col d-none d-lg-block">
-          <img
-            class="w-75 border rounded"
-            src="src/images/weather_app.png"
-            class="img-fluid rounded home-img"
-            alt="weather app screenshot"
-          />
-        </div>
-      </div>
-
-      <div class="row p-5">
-        <div class="col d-none d-lg-block">
-          <img
-            class="w-75 border rounded"
-            src="src/images/portfolio_example.png"
-            class="img-fluid rounded home-img"
-            alt="portfolio example screenshot"
-          />
-        </div>
-        <div class="col">
-          <h4 class="header app portfolio-app">Portfolio Template App</h4>
-          <p class="app-description p-3">
-            Madeline's Portfolio Template App is responsive. This app was
-            designed to be an example of a front-end developer's portfolio.
-          </p>
-          <a
-            class="btn btn-dark app-launch-btn pt-3 pb-3"
-            href="https://deluxe-puffpuff-1b88aa.netlify.app/index.html"
-            target="blank"
-            role="button"
-            >Launch Portfolio Template App</a
-          >
-        </div>
       </div>
     </div>
     <hr />
