--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
             >
             <a class="nav-link text-dark" href="about.html">About</a>
             <a class="nav-link text-dark" href="projects.html">Projects</a>
-            <a class="nav-link text-dark" href="#e-mail">Contact</a>
+            <a class="nav-link text-dark" href="index.html#e-mail">Contact</a>
           </div>
         </div>
       </div>
