--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
       </div>
     </nav>
 
-    <h1 class="about-me-header" id="about">About Me</h1>
+    <h1 class="about-me-header">About Me</h1>
     <hr />
     <hr />
     <hr />
