--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/style.css" />
-    <title>About Me - Madeline Lester</title>
+    <title>Contact Me - Madeline Lester</title>
   </head>
   <body>
     <nav
@@ -66,47 +66,28 @@
       </div>
     </nav>
 
-    <h1 class="about-me-header">About Me</h1>
-    <hr />
-    <hr />
-    <hr />
-
-    <div class="work-experience-section">
-      <h4 class="header pb-3">Work Experience</h4>
-      <p class="work-description">
-        Madeline is a Board Certified Behavior Analyst turned Front-End
-        Developer. She has always enjoyed tapping into her creativity and
-        problem-solving abilities. Madeline stumbled upon coding classes in
-        January of 2022. Madeline quickly became enamored with coding and
-        decided to pursue a new career in which she could continue to
-        collaborate and assist others in achieving their short-term and
-        long-term objectives.
-      </p>
+    <div class="contact-section">
+      <h2 class="header">Get in Touch</h2>
+      <p class="contact-message m-4">Want to collaborate or have questions?</p>
+      <a
+        id="e-mail"
+        class="btn btn-outline-dark mb-5"
+        href="mailto:mlester8815@gmail.com"
+        >Say Hello ✌️</a
+      >
     </div>
+    <div class="social-media m-5">
+      <a href="https://github.com/madellester" target="_blank"
+        ><i class="fa-brands fa-github"></i
+      ></a>
 
-    <div class="skills-section">
-      <h4 class="header skills-header pb-3">Skills</h4>
-      <p class="skills-description">
-        Here are some of the skills Madeline can bring to the team:
-      </p>
-      <ul>
-        <li>Effective collaborator</li>
-        <li>Adept communicator</li>
-        <li>Takes initiative</li>
-        <li>Detail-oriented</li>
-        <li>Persistant problem-solver</li>
-        <li>Creative</li>
-        <li>Dedicated learner</li>
-      </ul>
-    </div>
+      <a
+        href="https://www.linkedin.com/in/madeline-lester-88lwl15/"
+        target="_blank"
+        ><i class="fa-brands fa-linkedin"></i
+      ></a>
 
-    <div class="interests-section">
-      <h4 class="header pb-3">Interests</h4>
-      <p class="interests-description">
-        Madeline loves spending time with her husband and son as well as their
-        large extended family and friends. She enjoys Rom-Coms and dry humor.
-        Traveling and trying new foods and wine never get old.
-      </p>
+      <p class="mt-3">Open-sourced code by Madeline Lester</p>
     </div>
   </body>
 </html>
