Added contact me button

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
         <p class="job-title mt-3">
           I am a Front-End Developer based in Florida
         </p>
+        <a class="btn contact-btn btn-outline-dark" href="#" role="button"
+          >Contact Me</a
+        >
       </div>
 
       <div class="flex-fill d-lg-block ml-pic">
