Linked contact page on navbar

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             >
             <a class="nav-link text-dark" href="about.html">About</a>
             <a class="nav-link text-dark" href="projects.html">Projects</a>
-            <a class="nav-link text-dark" href="#e-mail">Contact</a>
+            <a class="nav-link text-dark" href="contact.html">Contact</a>
           </div>
         </div>
       </div>
