--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
         <p class="job-title mt-3">
           I am a Front-End Developer based in Florida
         </p>
-        <a class="btn contact-btn btn-outline-dark" href="#" role="button"
+        <a
+          class="btn contact-btn btn-outline-dark"
+          href="mailto:mlester8815@gmail.com"
+          role="button"
           >Contact Me</a
         >
       </div>
