Moved weather-app class and edited padding for small screen

--- a/projects.html
+++ b/projects.html
@@ -99,9 +99,9 @@
         </div>
       </div>
 
-      <div class="row p-5 weather-app">
+      <div class="row p-5">
         <div class="col">
-          <h4 class="header app">Weather App</h4>
+          <h4 class="header app weather-app">Weather App</h4>
           <p class="app-description p-3">
             This Weather App can share real-time weather information. Type your
             location or anywhere in the world into the search bar to find your
