Adjusted padding and added classes to images to reposition them in css

--- a/projects.html
+++ b/projects.html
@@ -75,7 +75,7 @@
       <div class="row p-5">
         <div class="col d-none d-lg-block">
           <img
-            class="w-75 border rounded"
+            class="w-75 border rounded boba-image"
             src="src/images/boba_tea.png"
             class="img-fluid rounded home-img"
             alt="boboa tea app screenshot"
@@ -83,7 +83,7 @@
         </div>
         <div class="col">
           <h4 class="header app boba-app">Bubble Tea App</h4>
-          <p class="app-description p-3">
+          <p class="app-description pt-3 pb-3">
             This Bubble Tea App was Madeline's first taste of coding that
             sparked her interest in web design. After taking an introductory
             class via SheCodes with no prior experience, this app was her final
@@ -102,11 +102,12 @@
       <div class="row p-5">
         <div class="col">
           <h4 class="header app weather-app">Weather App</h4>
-          <p class="app-description p-3">
+          <p class="app-description pt-3 pb-3">
             This Weather App can share real-time weather information. Type your
             location or anywhere in the world into the search bar to find your
             accurate forecast. Check out the app and interact with it!
           </p>
+
           <a
             class="btn btn-dark app-launch-btn pt-3 pb-3"
             href="https://calm-gingersnap-42cb99.netlify.app/"
@@ -118,7 +119,7 @@
 
         <div class="col d-none d-lg-block">
           <img
-            class="w-75 border rounded"
+            class="w-75 border rounded weather-image"
             src="src/images/weather_app.png"
             class="img-fluid rounded home-img"
             alt="weather app screenshot"
@@ -129,7 +130,7 @@
       <div class="row p-5">
         <div class="col d-none d-lg-block">
           <img
-            class="w-75 border rounded"
+            class="w-75 border rounded portfolio-image"
             src="src/images/portfolio_example.png"
             class="img-fluid rounded home-img"
             alt="portfolio example screenshot"
@@ -137,7 +138,7 @@
         </div>
         <div class="col">
           <h4 class="header app portfolio-app">Portfolio Template App</h4>
-          <p class="app-description p-3">
+          <p class="app-description pt-3 pb-3">
             Madeline's Portfolio Template App is responsive. This app was
             designed to be an example of a front-end developer's portfolio.
           </p>
