Moved button placement on Projects page

--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,7 @@
             href="https://www.shecodes.io/workshops/shecodes-basics-948b080f-f680-4a22-b8bd-8d57ae6ee387/projects/728242"
             target="_blank"
             role="button"
-            >Launch Bubble Tea App</a
+            >Check it out!</a
           >
         </div>
       </div>
@@ -113,7 +113,7 @@
             href="https://calm-gingersnap-42cb99.netlify.app/"
             target="_blank"
             role="button"
-            >Launch Weather App</a
+            >Check it out!</a
           >
         </div>
 
@@ -147,7 +147,7 @@
             href="https://deluxe-puffpuff-1b88aa.netlify.app/index.html"
             target="blank"
             role="button"
-            >Launch Portfolio Template App</a
+            >Check it out!</a
           >
         </div>
       </div>
