--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,8 @@
     </nav>
 
     <div class="contact-section">
-      <h2 class="header">Get in Touch</h2>
+      <h1 class="contact-me-header">Get in Touch</h1>
+
       <p class="contact-message m-4">Want to collaborate or have questions?</p>
       <a
         id="e-mail"
@@ -76,7 +77,7 @@
         >Say Hello ✌️</a
       >
     </div>
-    <div class="social-media m-5">
+    <div class="social-media social-media-contact-page">
       <a href="https://github.com/madellester" target="_blank"
         ><i class="fa-brands fa-github"></i
       ></a>
