Left aligned Project page buttons and edited all buttons' styling

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           I am a Front-End Developer based in Florida
         </p>
         <a
-          class="btn contact-btn btn-outline-dark"
+          class="btn contact-btn btn-dark pt-2 pb-2"
           href="mailto:mlester8815@gmail.com"
           role="button"
           >Contact Me</a
