--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
     <hr />
     <hr />
     <hr />
-    <div class="container text-center app-preview-display">
+    <div class="container text-left app-preview-display">
       <div class="row p-5">
         <div class="col d-none d-lg-block">
           <img
@@ -90,7 +90,7 @@
             project. Check it out here!
           </p>
           <a
-            class="btn btn-dark app-launch-btn pt-3 pb-3"
+            class="btn btn-dark app-launch-btn pt-2 pb-2"
             href="https://www.shecodes.io/workshops/shecodes-basics-948b080f-f680-4a22-b8bd-8d57ae6ee387/projects/728242"
             target="_blank"
             role="button"
@@ -109,7 +109,7 @@
           </p>
 
           <a
-            class="btn btn-dark app-launch-btn pt-3 pb-3"
+            class="btn btn-dark app-launch-btn pt-2 pb-2"
             href="https://calm-gingersnap-42cb99.netlify.app/"
             target="_blank"
             role="button"
@@ -143,7 +143,7 @@
             designed to be an example of a front-end developer's portfolio.
           </p>
           <a
-            class="btn btn-dark app-launch-btn pt-3 pb-3"
+            class="btn btn-dark app-launch-btn pt-2 pb-2"
             href="https://deluxe-puffpuff-1b88aa.netlify.app/index.html"
             target="blank"
             role="button"
