--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
       <p class="contact-message m-4">Want to collaborate or have questions?</p>
       <a
         id="e-mail"
-        class="btn btn-outline-dark mb-5"
+        class="btn btn-dark mb-5 pt-2 pb-2"
         href="mailto:mlester8815@gmail.com"
         >Say Hello ✌️</a
       >
