Styled contact page

--- a/contact.html
+++ b/contact.html
@@ -68,11 +68,12 @@
 
     <div class="contact-section">
       <h1 class="contact-me-header">Get in Touch</h1>
-
+      <hr />
+      <hr />
+      <hr />
       <p class="contact-message m-4">Want to collaborate or have questions?</p>
       <a
-        id="e-mail"
-        class="btn btn-dark mb-5 pt-2 pb-2"
+        class="btn btn-dark mb-5 pt-2 pb-2 say-hello-btn"
         href="mailto:mlester8815@gmail.com"
         >Say Hello ✌️</a
       >
