Edited narrative for portfolio app

--- a/projects.html
+++ b/projects.html
@@ -139,8 +139,8 @@
         <div class="col">
           <h4 class="header app portfolio-app">Portfolio Template App</h4>
           <p class="app-description pt-3 pb-3">
-            Madeline's Portfolio Template App is responsive. This app was
-            designed to be an example of a front-end developer's portfolio.
+            This app was designed to be an example of a portfolio. During this
+            project, Madeline learned how to make websites responsive.
           </p>
           <a
             class="btn btn-dark app-launch-btn pt-2 pb-2"
