Made website SEO friendly

--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Madeline Lester has work experience, skills, and interests."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -38,7 +42,12 @@
       style="background-color: var(--primary-color)"
     >
       <div class="container-fluid">
-        <a class="navbar-brand text-dark" href="index.html">ML</a>
+        <a
+          class="navbar-brand text-dark"
+          href="index.html"
+          title="Madeline Lester's homepage website"
+          >ML</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -56,11 +65,27 @@
               class="nav-link active text-dark"
               aria-current="page"
               href="index.html"
+              title="Madeline Lester's homepage website"
               >Home</a
             >
-            <a class="nav-link text-dark" href="about.html">About</a>
-            <a class="nav-link text-dark" href="projects.html">Projects</a>
-            <a class="nav-link text-dark" href="contact.html">Contact</a>
+            <a
+              class="nav-link text-dark"
+              href="about.html"
+              title="Madeline Lester's About Me website"
+              >About</a
+            >
+            <a
+              class="nav-link text-dark"
+              href="projects.html"
+              title="Madeline Lester's My Projects website"
+              >Projects</a
+            >
+            <a
+              class="nav-link text-dark"
+              href="contact.html"
+              title="Madeline Lester's Contact Me website"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
@@ -109,13 +134,17 @@
       </p>
     </div>
     <div class="social-media m-5">
-      <a href="https://github.com/madellester" target="_blank"
+      <a
+        href="https://github.com/madellester"
+        target="_blank"
+        title="Madeline Lester's Github website"
         ><i class="fa-brands fa-github"></i
       ></a>
 
       <a
         href="https://www.linkedin.com/in/madeline-lester-88lwl15/"
         target="_blank"
+        title="Madeline Lester's Linkedin website"
         ><i class="fa-brands fa-linkedin"></i
       ></a>
 
