--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Contact Madeline to learn more about her and collaborate with her."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -75,17 +79,22 @@
       <a
         class="btn btn-dark mb-5 pt-2 pb-2 say-hello-btn"
         href="mailto:mlester8815@gmail.com"
+        title="Madeline Lester's e-mail"
         >Say Hello ✌️</a
       >
     </div>
     <div class="social-media social-media-contact-page">
-      <a href="https://github.com/madellester" target="_blank"
+      <a
+        href="https://github.com/madellester"
+        target="_blank"
+        title="Madeline Lester's github website"
         ><i class="fa-brands fa-github"></i
       ></a>
 
       <a
         href="https://www.linkedin.com/in/madeline-lester-88lwl15/"
         target="_blank"
+        title="Madeline Lester's Linkedin website"
         ><i class="fa-brands fa-linkedin"></i
       ></a>
 
