--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
+    <meta
+      name="description"
+      content="Madeline Lester is a front-end developer. This website is her portfolio."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -39,7 +42,12 @@
       style="background-color: var(--primary-color)"
     >
       <div class="container-fluid">
-        <a class="navbar-brand text-dark" href="index.html">ML</a>
+        <a
+          class="navbar-brand text-dark"
+          href="index.html"
+          title="Madeline Lester's homepage website"
+          >ML</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -57,11 +65,27 @@
               class="nav-link active text-dark"
               aria-current="page"
               href="index.html"
+              title="Madeline Lester's homepage website"
               >Home</a
             >
-            <a class="nav-link text-dark" href="about.html">About</a>
-            <a class="nav-link text-dark" href="projects.html">Projects</a>
-            <a class="nav-link text-dark" href="contact.html">Contact</a>
+            <a
+              class="nav-link text-dark"
+              href="about.html"
+              title="Madeline Lester's About Me website"
+              >About</a
+            >
+            <a
+              class="nav-link text-dark"
+              href="projects.html"
+              title="Madeline Lester's My Projects website"
+              >Projects</a
+            >
+            <a
+              class="nav-link text-dark"
+              href="contact.html"
+              title="Madeline Lester's Contact Me website"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
@@ -77,6 +101,7 @@
           class="btn contact-btn btn-dark pt-2 pb-2"
           href="mailto:mlester8815@gmail.com"
           role="button"
+          title="Contact e-mail"
           >Contact Me</a
         >
       </div>
@@ -90,13 +115,17 @@
     <hr />
 
     <div class="social-media m-5">
-      <a href="https://github.com/madellester" target="_blank"
+      <a
+        href="https://github.com/madellester"
+        target="_blank"
+        title="Madeline Lester's GitHub website"
         ><i class="fa-brands fa-github"></i
       ></a>
 
       <a
         href="https://www.linkedin.com/in/madeline-lester-88lwl15/"
         target="_blank"
+        title="Madeline Lester's Linkedin website"
         ><i class="fa-brands fa-linkedin"></i
       ></a>
 
